调整日志打印颜色

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -19,7 +19,18 @@
 rootLogger.level = INFO
 rootLogger.appenderRef.console.ref = ConsoleAppender
 
+#appender.console.name = ConsoleAppender
+#appender.console.type = CONSOLE
+#appender.console.layout.type = PatternLayout
+#appender.console.layout.pattern = %d{HH:mm:ss,SSS} %-5p %-60c [%t] %x - %m%n
+
+appender.console.type = Console
 appender.console.name = ConsoleAppender
-appender.console.type = CONSOLE
+appender.console.target = SYSTEM_OUT
+
+# Layout ??
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{HH:mm:ss,SSS} %-5p %-60c [%t] %x - %m%n
+appender.console.layout.pattern = %highlight{%d{[yyyy-MM-dd HH:mm:ss]}}{FATAL=blue, ERROR=Red, WARN=blue, INFO=blue, DEBUG=blue, TRACE=blue} %highlight{%-5p} | %highlight{%c}{FATAL=cyan, ERROR=cyan, WARN=cyan, INFO=cyan, DEBUG=cyan, TRACE=cyan} | %m%n
+appender.console.layout.disableAnsi = false
+
+
